# reelforge

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
apps/api/: Dockerfile  __init__.py  main.py  middleware.py  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial.py
apps/api/routers/: __init__.py  auth.py  dna_templates.py  jobs.py  reels.py  trends.py  upload.py  vault.py  webhooks.py
apps/api/services/: __init__.py  auth.py  job_service.py
apps/web/: middleware.ts  next.config.ts  package-lock.json  package.json
apps/web/app/[locale]/: globals.css  layout.tsx  page.tsx
apps/web/components/editor/: DNAVisualizer.tsx  ShotDirector.tsx
apps/web/i18n/: request.ts  routing.ts
apps/web/lib/: api.ts  store.ts
apps/web/messages/: ar.json  de.json  en.json  es.json  fr.json  it.json  ja.json  pt.json  ru.json  zh.json
scripts/: generate_luts.py  setup.sh
services/notify/: Dockerfile  __init__.py  main.py
services/trend/: Dockerfile  __init__.py  main.py  requirements.txt
shared/: config.py
shared/models/: __init__.py  database.py
shared/queue/: __init__.py
shared/schemas/: __init__.py
shared/storage/: __init__.py
workers/: Dockerfile  __init__.py  celery_app.py  requirements.txt
workers/assembly/: __init__.py  tasks.py
workers/audio/: __init__.py  tasks.py
workers/blueprint/: __init__.py  tasks.py
workers/dna/: __init__.py  tasks.py
workers/ingest/: __init__.py  tasks.py
workers/scene/: __init__.py  tasks.py
workers/scoring/: __init__.py  tasks.py
(+8 files in other folders)
