[project]
name = "reelforge"
version = "0.1.0"
description = "ReelForge AI — Zero-edit AI video director for short-form content"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
